compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__guards__module_tuple_access.snap
---
source: compiler-core/src/erlang/tests/guards.rs
assertion_line: 545
expression: "\n          import hero\n          pub fn main() {\n            let name = \"Tony Stark\"\n            case name {\n              n if n == hero.hero.1 -> True\n              _ -> False\n            }\n          }\n        "
---
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([main/0]).

-file("/root/project/test/my/mod.rakun", 3).
-spec main() -> boolean().
main() ->
    Name = <<"Tony Stark"/utf8>>,
    case Name of
        N when N =:= erlang:element(
            2,
            {<<"ironman"/utf8>>, <<"Tony Stark"/utf8>>}
        ) ->
            true;

        _ ->
            false
    end.
