compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__guards__only_guards.snap
---
source: compiler-core/src/erlang/tests/guards.rs
assertion_line: 388
expression: "\npub const string_value = \"constant value\"\n\npub fn main(arg) {\n  case arg {\n    _ if arg == string_value -> 1\n    _ -> 0\n  }\n}\n"
---
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([main/1]).

-file("/root/project/test/my/mod.rakun", 4).
-spec main(binary()) -> integer().
main(Arg) ->
    case Arg of
        _ when Arg =:= <<"constant value"/utf8>> ->
            1;

        _ ->
            0
    end.
